trNgGrid.css
/*========================================================================*/
/*                    TrNgGrid version 3.1.7                              */
/*   -------------------------------------------------------------        */
/* THIS FILE WAS GENERATED VIA GULP. DO NOT MODIFY THIS FILE MANUALLY.    */
/*======================================================================= */
.tr-ng-grid .tr-ng-grid-footer .pagination {
  margin: 0; 
} 

.tr-ng-grid > thead > tr > th {
    text-align:center;
    vertical-align:top;
}

.tr-ng-grid > thead > tr > th, 
.tr-ng-grid > tbody > tr > td, 
.tr-ng-grid > thead > tr > th > .tr-ng-cell, 
.tr-ng-grid > tbody > tr > td > .tr-ng-cell
{
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.tr-ng-grid > tbody > tr > td > .tr-ng-cell {
  overflow: visible;
}

.tr-ng-grid .tr-ng-sort {
    cursor: pointer;
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
}

.tr-ng-grid .tr-ng-sort .tr-ng-sort-active, .tr-ng-grid .tr-ng-sort .tr-ng-sort-inactive {
    position: absolute;
    top: 1px;
    right: 1px;
    width: 0.8em;
    height: 0.8em;
}

.tr-ng-grid .tr-ng-column-header .tr-ng-title {
    padding-top: 0.8em;
    position: relative;
}

.tr-ng-grid .tr-ng-column-header .tr-ng-column-filter {
  margin-top: 0.5em;
  margin-bottom: 0.1em;
}

/*Additional media blocks for IE*/ 
/* http://keithclark.co.uk/articles/moving-ie-specific-css-into-media-blocks/media-tests/ */
@media screen\0 {
    .tr-ng-grid .tr-ng-sort {
        background: transparent;
        background: rgba(255, 255, 255, 0);
    }
}


tfoot tr td[tr-ng-grid-footer-cell] div.tr-ng-grid-footer > div {
	width: 100%;
	display: flex;
}
tfoot tr td[tr-ng-grid-footer-cell] div.tr-ng-grid-footer > div span[tr-ng-grid-global-filter] {
	width: 50%;
}
tfoot tr td[tr-ng-grid-footer-cell] div.tr-ng-grid-footer > div span[tr-ng-grid-pager] {
	width: 50%;
}
tfoot tr td[tr-ng-grid-footer-cell] div.tr-ng-grid-footer > div span[tr-ng-grid-pager] ul.pagination {
	display: flex;
	flex-wrap: wrap;

	justify-content: flex-end;
}
tfoot tr td[tr-ng-grid-footer-cell] div.tr-ng-grid-footer > div span[tr-ng-grid-pager] ul.pagination li:first-child {
	margin-right: 0;
}

tfoot tr td[tr-ng-grid-footer-cell] div.tr-ng-grid-footer > div span[tr-ng-grid-pager] ul.pagination li:last-child {
	width: 100%;
	display: flex;
}
tfoot tr td[tr-ng-grid-footer-cell] div.tr-ng-grid-footer > div span[tr-ng-grid-pager] ul.pagination li:last-child span {
	margin-left: auto;
}

